# quantization_lib

./: MANIFEST.in  README.md  pyproject.toml
examples/: iris_basic.py
src/quantization/: aggregation.py  api.py  config.py  constants.py  quant_columns.py  types.py
src/quantization/_impl/: aggregation.py  finalizing.py  logging_helpers.py  quant_columns.py  quantization.py  rounding.py  yaml_helpers.py
tests/: test_aggregate.py  test_chunk_size_and_finalization.py  test_merge.py  test_round.py  test_streaming.py  utils.py
tests/aggregation/: test_circ_mean.py  test_max.py  test_mean.py  test_min.py  test_off.py  test_value_counts.py  utils.py
