[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantization_lib"
version = "0.0.1"
authors = [
    { name = "Aleksandrina Streltsova", email = "aleksandrina.streltsova@epfl.ch" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars",
    "pyyaml",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/aleksandrina.streltsova/quantization_lib"
Issues = "https://github.com/aleksandrina.streltsova/quantization_lib/issues"