[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantization_lib"
version = "0.0.1"
authors = [
    { name = "Aleksandrina Streltsova", email = "aleksandrina.streltsova@epfl.ch" },
]
description = "A Polars-based library for configurable quantization, aggregation, and streaming-friendly data distillation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars",
    "numpy",
    "pyyaml",
    "pytest",
    "hll-rust-py",
]

[project.urls]
Homepage = "https://github.com/aleksandrina.streltsova/quantization_lib"
Issues = "https://github.com/aleksandrina.streltsova/quantization_lib/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantization*"]
